syntax = "proto3";

option csharp_namespace = "CCM.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "common.proto";

service EnterpiseClient {
  
    rpc CreateEnterpriseClient (CreateEnterpriseClientRequest) returns (EnterpriseClientDTO);
    rpc GetEnterpriseClient (GetRequest) returns (NullableEnterpriseClientDTO);
    rpc UpdateEnterpriseClient (UpdateEnterpriseClientRequest) returns (EnterpriseClientDTO);
    rpc DeleteEnterpriceClient(EnterpriceClientsDTO) returns (google.protobuf.Empty);
}


message EnterpriseClientDTO{
	int32 id = 1;
	string brand = 2;
	PhysicalLocation location = 3;
}


message NullableEnterpriseClientsDTO{
	oneof kind{
		google.protobuf.NullValue null = 1;
		EnterpriseClientDTO enterpriseclient = 2;
	}
}

message CreateEnterpriseClientRequest{
	string brand = 1;
	PhysicalLocation location = 2;
}
